# genai-pipeline-challenge

./: .gitignore  Dockerfile  README.md  cleanup.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHALLENGE.md  CONVENTIONS.md
src/: config.py  constants.py  main.py
src/ai/: embedding.py  prompts.py  rag.py  vision.py
src/api/: client.py  error_map.py  health_route.py  ingestion_route.py  recommendation_route.py  schemas.py
src/core/: ingestion_service.py  recommendation_service.py
src/data/: base.py  database.py  decorator.py  models.py  repository.py
src/pipelines/: embedding_service.py
src/utils/: logger.py
tests/e2e/: test_ingestion.py  test_recommendation.py
tests/unit/api/: test_ingestion.py  test_recommendation.py
