[project]
name = "whats-for-dinner"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]

requires-python = "==3.13.3"
dependencies = [
    "haystack-ai==2.15.2",
    "fastapi==0.116.0",
    "pillow==11.3.0",
    "uvicorn==0.35.0",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.10.1",
    "SQLAlchemy==2.0.41",
    "pgvector==0.4.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "JSON-log-formatter==1.1.1",
    "openai==1.95.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
    "ruff==0.12.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["whats_for_dinner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
